--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.15.1",
     "highlight.js": "^11.1.0",
     "nuxt": "^2.15.7",
     "prismjs": "^1.24.1",
-    "vue-highlight.js": "^4.0.1-beta",
     "vue-prism-editor": "^1.2.2",
     "vue-simple-markdown": "^1.1.5",
     "vuetify": "^2.5.5"
