--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
+    "dev": "node node_modules/nuxt/bin/nuxt.js",
+    "build": "node node_modules/nuxt/bin/nuxt.js build",
+    "start": "node node_modules/nuxt/bin/nuxt.js start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "yarn lint:js",
@@ -15,11 +15,12 @@
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
+    "codemirror": "^5.62.2",
+    "cookie-universal-nuxt": "^2.1.5",
     "core-js": "^3.15.1",
     "highlight.js": "^11.1.0",
     "nuxt": "^2.15.7",
-    "prismjs": "^1.24.1",
-    "vue-prism-editor": "^1.2.2",
+    "vue-codemirror": "^4.0.6",
     "vue-simple-markdown": "^1.1.5",
     "vuetify": "^2.5.5"
   },
