--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
+    "@nuxtjs/toast": "^3.3.1",
     "codemirror": "^5.62.2",
-    "cookie-universal-nuxt": "^2.1.5",
     "core-js": "^3.15.1",
     "highlight.js": "^11.1.0",
     "nuxt": "^2.15.7",
